Add Bootstrap navbar and links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,9 @@ h3 {
     color: var(--highlight-color);
 }
 
-.container,
+/* Grid visualisation CSS for testing */
+
+/* .container,
 .row {
     border: 2px solid black;
 }
@@ -37,4 +39,4 @@ h3 {
 .col-12 {
     border: 2px solid white;
     background-color: lightgray;
-}
+} */
