--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,16 +17,19 @@
 body {
     font-family: var(--primary-font);
 }
-
 h1,
 h1,
 h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
+    text-transform: uppercase;
 }
-
 .sub-heading-color {
     color: var(--highlight-color);
+}
+.section {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
 
 /* Navbar */
@@ -34,11 +37,15 @@ h3 {
 #navbar {
     background-color: var(--primary-color);
 }
-
 #navbar .logo {
     width: 30px;
 }
 
+/* Header */
+
+#header .lead {
+    font-family: var(--secondary-font);
+}
 
 /* Grid visualisation CSS for testing */
 
