--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,27 @@ h2 {
 /* Media Queries */
 
 /* Medium devices (tablets, 768px and up) */
-
 @media screen and (min-width: 768px) {
-    
+    /* Makes all service cards the same height for consistency */
+    #services .card-body {
+        min-height: 191px;
+    }
+/* Large devices (small laptops, 992px and up) */
+@media screen and (min-width: 992px) {
+    /* Makes all service cards the same height for consistency */
+    #services .card-body {
+        min-height: auto;
+    }
+/* XL devices (desktops, 1200px and up) */
+@media screen and (min-width: 1200px) {
+    /* Makes all service cards the same height for consistency */
+    #services .card-body {
+        min-height: 220px;
+    }
+/* XXL devices (large desktops, 1400px and up) */
+@media screen and (min-width: 1400px) {
+    /* Makes all service cards the same height for consistency */
+    #services .card-body {
+        min-height: 195px;
+    }
 }
