Add new games and favourites sections to Games Library page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,12 @@ h2 {
     margin-bottom: 1.5rem;
 }
 
+/* Game Library cards */
+#new-games .card,
+#fav-games .card {
+    border: none;
+}
+
 /* Grid visualisation CSS for testing */
 
 /* .container,
