--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,10 @@ h2 {
 
 }
 
+#contact .table-dark * {
+    background-color: transparent;
+}
+
 /* Grid visualisation CSS for testing */
 
 /* .container,
