Add Booking inquiry page and form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,9 +102,9 @@ h2 {
     background-color: transparent;
 }
 
-/* Grid visualisation CSS for testing */
+/* Grid visualisation CSS for testing 
 
-/* .container,
+.container,
 .row {
     border: 2px solid black;
 }
