--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,12 @@ h2 {
     color: white;
 }
 
-
+.student-discount {
+    background-color: var(--highlight-color);
+    color: white;
+    font-weight: bold;
+    padding: 10px 20px;
+}
 
 /* Navbar */
 #navbar {
@@ -144,11 +149,21 @@ h2 {
 
 /* Media Queries */
 
+/* Small devices (phones, 320px and up) */
+@media screen and (min-width: 320px) {
+    .student-discount {
+        display: block;
+    }
+}
+
 /* Medium devices (tablets, 768px and up) */
 @media screen and (min-width: 768px) {
     /* Makes all service cards the same height for consistency */
     #services .card-body {
         min-height: 191px;
+    }
+    .student-discount {
+        display: inline;
     }
 }
 /* Large devices (small laptops, 992px and up) */
